--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
       {
         address: "Avenue Gendarme Castermant, Chelles 77500, France",//8
-        name: "<B>We Audition Chelles</B> 01-85429994 A cote de histoire d'or colle au magasin (cordonnerie mystere minique) parking porte 5",//8
+        name: "<B>We Audition Chelles</B> 01-85429994 A cote de histoire d'or colle au magasin (cordonnerie mystere miniques) parking porte 5",//8
         audioprothetist: "XXX",
         openingHours: "Lundi au vendredi",//8
         image: "https://lh3.googleusercontent.com/p/AF1QipNw3ABs-rFyYV-VvA4QJFSR9NKW4254VXRm-VTr=s1360-w1360-h1020", //Centre 8 Chelles
