--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
       {
         address: "Avenue Gendarme Castermant, Chelles 77500, France",//8
-        name: "<B>We Audition Chelles</B> 01-85429994 A cote de histoire d'or colle au magasin (cordonnerie mystere miniques) parking porte 5",//8
+        name: "<B>We Audition Chelles</B> 01-85429994 A cote de histoire d'or colle au magasin (cordonnerie mystere minique) parking porte 5",//8
         audioprothetist: "XXX",
         openingHours: "Lundi au vendredi",//8
         image: "https://lh3.googleusercontent.com/p/AF1QipNw3ABs-rFyYV-VvA4QJFSR9NKW4254VXRm-VTr=s1360-w1360-h1020", //Centre 8 Chelles
@@ -176,7 +176,7 @@
 
       {
         address: "Avenue de la Maison Neuve, Brétigny sur Orge 91220, France",//14
-        name: "<B>We Audition Bretigny</B> 01-85460066",//14
+        name: "<B>We Audition Bretigny</B> 01-85460066 Centre commercial Aushopping face à Auchan a cote du Flunch",//14
         audioprothetist: "XXX",
         openingHours: "Lundi et Mardi",//14
         image: "https://lh3.googleusercontent.com/p/AF1QipOYw-YYUqi5l7qfGF0VyqQHPumrNNLy_ItOXpXK=s1360-w1360-h1020", // Centre 14 Bretigny
@@ -602,6 +602,46 @@
         image: "", // Centre 56 Marseille Le Merland
         markerColor: "red"
       },
+
+
+      {
+        address: "136 cours Emile Zola 69100 Villeurbanne",//57
+        name: "<B>Mon Audio Concept</B> 04-77272705 Centre pignon sur rue",//57
+        audioprothetist: "Noam Amsellem",
+        openingHours: "Lundi au Vendredi",//57
+        image: "https://lh3.googleusercontent.com/p/AF1QipMvAtd9xi6jb4Z_k0e1HU0L18jwyWdPICitp6s2=s680-w680-h510", // Centre 57 Villeurbanne
+        markerColor: "yellow"
+      },
+
+
+      {
+        address: "59 Rue du Général de Gaulle, 94350 Villiers-sur-Marne, France",//58
+        name: "<B>InOuïe Audition - Villiers-sur-Marne</B> 01-57109212 Centre pignon sur rue",//58
+        audioprothetist: "XXX",
+        openingHours: "Lundi au Vendredi",//58
+        image: "https://lh3.googleusercontent.com/p/AF1QipPRVsis8iCNg2RaBqymQF-io9M_B_Pp4dsr2dI8=s680-w680-h510", // Centre 58 Villiers sur marne
+        markerColor: "blue"
+      },
+
+
+      {
+        address: "42 Avenue Jean Lolive, 93500 Pantin, France",//59
+        name: "<B>Inouie Audition - Audioprothésiste Pantin</B> 01-80892830 Centre pignon sur rue",//59
+        audioprothetist: "XXX",
+        openingHours: "Lundi au Vendredi",//59
+        image: "https://lh3.googleusercontent.com/p/AF1QipOGM9a30YAgMhmhqmFMYwrbPNkhDMYFdOHi5Cmo=s680-w680-h510", // Centre 59 Pantin
+        markerColor: "blue"
+      },
+
+
+      {
+        address: "75 Rue Jean Jaurès, 93130 Noisy-le-Sec, France",//60
+        name: "<B>InOuïe Audition - Audioprothésiste Noisy Le Sec</B> 01-48442717 Centre pignon sur rue",//60
+        audioprothetist: "XXX",
+        openingHours: "Lundi au Vendredi",//60
+        image: "https://lh3.googleusercontent.com/p/AF1QipPFDD0CXjY0gvOS86LruxToCI8T6wjOJv-Fw_CY=s1360-w1360-h1020", // Centre 60 Noisy le sec
+        markerColor: "blue"
+      },
      
     ];
 
@@ -843,4 +883,8 @@ document.getElementById('start').addEventListener('change', geocodeStartAddress)
   async defer></script>
 </body>
 </html>
+
+
+
+
 
