--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
 
 
       {
-        address: "1 place du caquet, Saint Denis 93200, France",//23
+        address: "5 passage des arbaletriers, Saint Denis 93200, France",//23
         name: "<B>We Audition Saint Denis</B> 01-84219992 Centre commercial Basilique",//23
         audioprothetist: "XXX",
         openingHours: "Lundi au vendredi",//23
@@ -740,6 +740,68 @@
         image: "https://lh3.googleusercontent.com/p/AF1QipO6GtMaAR-L7wY9QIIJlIKubBmWJDKeWRUZeYcj=s680-w680-h510", // Centre Montigny les cormeilles
         markerColor: "blue"
       },
+
+
+      {
+        address: "Zac saint Ladre Rue Botticelli, 80080 Amiens, France",//62
+        name: "<B>We Audition Amiens</B> 03-65895040 Centre commercial Carrefour Amiens-RDC Entre Atol et Histoire d'Or",//62
+        audioprothetist: "XXX",
+        openingHours: "Jeudi",//62
+        image: "https://lh3.googleusercontent.com/p/AF1QipPvb6DzQf4CAi99aQz8DxcFWUsdITgtO9qEMgyn=s1360-w1360-h1020", // Centre Amiens
+        markerColor: "red"
+      },
+
+
+      {
+        address: "1001 Boulevard du Kent, 62231 Coquelles, France",//63
+        name: "<B>We Audition Coquelles</B> 03-74969989 Centre commercial Cité Europe-1 er etage-porte 1",//63
+        audioprothetist: "XXX",
+        openingHours: "XXX",//63
+        image: "https://lh3.googleusercontent.com/p/AF1QipPvb6DzQf4CAi99aQz8DxcFWUsdITgtO9qEMgyn=s1360-w1360-h1020", // Centre Coquelles
+        markerColor: "red"
+      },
+
+
+      {
+        address: "Avenue Georges Guynemer, 62100 Calais, France",//64
+        name: "<B>We audition Mivoix</B>  03-74960288 Centre commercial Carrrefour Mivoix a cote de la Pharmacie",//64
+        audioprothetist: "XXX",
+        openingHours: "XXX",//64
+        image: "https://lh3.googleusercontent.com/p/AF1QipPvb6DzQf4CAi99aQz8DxcFWUsdITgtO9qEMgyn=s1360-w1360-h1020", // Centre Calais
+        markerColor: "red"
+      },
+
+
+      {
+        address: "16 rue de Cernay, 51100 Reims, France",//65
+        name: "<B>We audition Reims Cernay</B> 03-52740960 Centre Commercial Carrefour Reims Cernay RDC",//65
+        audioprothetist: "XXX",
+        openingHours: "XXX",//65
+        image: "https://lh3.googleusercontent.com/p/AF1QipPi4NXh6jHXJfNVOKnIkX33BLc70dAnrRpGPM1D=s1360-w1360-h1020", // Centre Reims Cernay
+        markerColor: "red"
+      },
+
+
+      {
+        address: "Route de soissons, 51430 Tinqueux, France",//66
+        name: "<B>We audition Reims Tinqueux</B> 03-52740950 Centre commercial Carrefour Reims Tinqueux",//66
+        audioprothetist: "XXX",
+        openingHours: "XXX",//66
+        image: "https://lh3.googleusercontent.com/p/AF1QipMIf4uMo-YPexUiGuyQdMf4A_RPRZThh0-UkS1R=s1360-w1360-h1020", // Centre Reims Tinqueux
+        markerColor: "red"
+      },
+
+
+      {
+        address: "N10, 78120 Rambouillet, France",//67
+        name: "<B>We audition Rambouillet</B> 01-85770011 Centre commercial Bel Air- Porte Greneau",//67
+        audioprothetist: "XXX",
+        openingHours: "XXX",//67
+        image: "https://lh3.googleusercontent.com/p/AF1QipMIf4uMo-YPexUiGuyQdMf4A_RPRZThh0-UkS1R=s1360-w1360-h1020", // Centre Rambouillet
+        markerColor: "red"
+      },
+
+
 
 
   ];
