--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
 
       {
         address: "11 Rue Bréa, Paris 75006, France",//38
-        name: "<B>A l'écoute Paris 6eme</B> 01-89675257 Metro Vavin (ligne 4), Magasin Pignon sur rue",//38
+        name: "<B>A l'écoute Paris 6e</B> 01-89675257 Metro Vavin (ligne 4), Magasin Pignon sur rue",//38
         audioprothetist: "XXX",
         openingHours: "Lundi au vendredi",//38
         image: "https://lh3.googleusercontent.com/p/AF1QipMV3NjAIgYU5H1JnTCpBCuW1M2rpV5AU_Y0cUIB=s1360-w1360-h1020", // Centre 38 A l'\ecoute
