--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 
@@ -199,7 +198,7 @@
             '<p style="font-size: 14px;"><strong>Téléphone:</strong> ' + center.phone + '</p>' +
             "<p style='font-size: 14px;'><strong>Complément d'adresse:</strong> " + center.address_complement + '</p>' +
             '<p style="font-size: 14px;"><strong>Audioprothésiste:</strong> ' + center.audioprothetist + '</p>' +
-            //'<img src="' + center.image + '" alt="Photo" style="width:100px; height:100px;"><br>' +
+            '<img src="' + center.image + '" alt="Photo" style="width:100px; height:100px;"><br>' +
             '<button style="background-color: #007bff; color: #fff; padding: 5px 10px; border: none; cursor: pointer;" onclick="openDetailsPage(' + index + ')">Voir détails</button>' +
             '</div>';
 
@@ -387,7 +386,7 @@
       '<p><strong>Heures d\'ouverture:</strong> ' + center.openingHours.replace(',', '').replace(/"/g, '') + '</p>' +
       '<p><strong>Audioprothésiste:</strong> ' + center.audioprothetist + '</p>' +
       '<p><strong>Téléphone:</strong> ' + center.phone + '</p>' +
-      //'<img src="' + center.image + '" alt="Photo">' +
+      '<img src="' + center.image + '" alt="Photo">' +
       '</div>' +
       '</body>' +
       '</html>';
