--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
       openingHours: source.Date_pr_sence_Audio ? source.Date_pr_sence_Audio.replace(',', '').replace(/"/g, '') : "",
       image: source.URL_Image_Centre,
       phone: source.Phone,
+      prisederdv: source.Type_de_RDV,
       markerColor: source.Couleur_Picto,
       ...source
     };
@@ -198,7 +199,8 @@
             '<p style="font-size: 14px;"><strong>Téléphone:</strong> ' + center.phone + '</p>' +
             "<p style='font-size: 14px;'><strong>Complément d'adresse:</strong> " + center.address_complement + '</p>' +
             '<p style="font-size: 14px;"><strong>Audioprothésiste:</strong> ' + center.audioprothetist + '</p>' +
-            '<img src="' + center.image + '" alt="Photo" style="width:100px; height:100px;"><br>' +
+            '<p style="font-size: 14px;"><strong>Prise de RDV:</strong> ' + center.prisederdv + '</p>' +
+            //'<img src="' + center.image + '" alt="Photo" style="width:100px; height:100px;"><br>' +
             '<button style="background-color: #007bff; color: #fff; padding: 5px 10px; border: none; cursor: pointer;" onclick="openDetailsPage(' + index + ')">Voir détails</button>' +
             '</div>';
 
@@ -386,7 +388,7 @@
       '<p><strong>Heures d\'ouverture:</strong> ' + center.openingHours.replace(',', '').replace(/"/g, '') + '</p>' +
       '<p><strong>Audioprothésiste:</strong> ' + center.audioprothetist + '</p>' +
       '<p><strong>Téléphone:</strong> ' + center.phone + '</p>' +
-      '<img src="' + center.image + '" alt="Photo">' +
+      //'<img src="' + center.image + '" alt="Photo">' +
       '</div>' +
       '</body>' +
       '</html>';
