--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
             "<p style='font-size: 14px;'><strong>Complément d'adresse:</strong> " + center.address_complement + '</p>' +
             '<p style="font-size: 14px;"><strong>Audioprothésiste:</strong> ' + center.audioprothetist + '</p>' +
             '<p style="font-size: 14px;"><strong>Prise de RDV:</strong> ' + center.prisederdv + '</p>' +
-            //'<img src="' + center.image + '" alt="Photo" style="width:100px; height:100px;"><br>' +
+            '<img src="' + center.image + '" alt="Photo" style="width:100px; height:100px;"><br>' +
             '<button style="background-color: #007bff; color: #fff; padding: 5px 10px; border: none; cursor: pointer;" onclick="openDetailsPage(' + index + ')">Voir détails</button>' +
             '</div>';
 
